Fix vertical alignment

--- a/sass/home-page.scss
+++ b/sass/home-page.scss
@@ -435,6 +435,7 @@
 
 	.visuel__letter {
 		left: 50%;
+		top: 50%;
 	}
 }
 
